login / logout functionality added

--- a/index.html
+++ b/index.html
@@ -13,5 +13,16 @@
 
     <title>Wine is Fine</title>
   </head>
-  <body></body>
+  <body>
+
+    <div>
+      <button class="toggle-nav">
+        <i class="fas fa-bars"></i>
+      </button>
+      <ul class="nav-links">
+      </ul>
+    </div>
+
+
+  </body>
 </html>
