--- a/index.html
+++ b/index.html
@@ -12,16 +12,10 @@
     <script src="/src/app.js" type="module"></script>
 
     <title>Wine is Fine</title>
+    <link rel="icon" type="image/x-icon" href="/images/favi-wine.png">
+
   </head>
   <body>
-
-    <div>
-      <button class="toggle-nav">
-        <i class="fas fa-bars"></i>
-      </button>
-      <ul class="nav-links">
-      </ul>
-    </div>
 
 
   </body>
