order / your order functionality added

--- a/index.html
+++ b/index.html
@@ -12,11 +12,14 @@
     <script src="/src/app.js" type="module"></script>
 
     <title>Wine is Fine</title>
-    <link rel="icon" type="image/x-icon" href="/images/favi-wine.png">
-
+    <link rel="icon" type="image/x-icon" href="/images/favi-wine.png" />
   </head>
   <body>
-
-
+    <!-- notification message-->
+    <section id="notifications">
+      <div id="errorBox" class="notification">
+        <span>MESSAGE</span>
+      </div>
+    </section>
   </body>
 </html>
