not found page added

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <!-- notification message-->
     <section id="notifications">
       <div id="errorBox" class="notification">
-        <span>MESSAGE</span>
+        <span></span>
       </div>
     </section>
   </body>
