--- a/template.html
+++ b/template.html
@@ -20,5 +20,9 @@
         <span></span>
       </div>
     </section>
+        <!-- loading message -->
+        <div class="page-loading">
+          <h2>Loading...</h2>
+        </div>
   </body>
 </html>
