--- a/index.html
+++ b/index.html
@@ -21,5 +21,9 @@
         <span></span>
       </div>
     </section>
+    <!-- loading message -->
+    <div class="page-loading">
+      <h2>Loading...</h2>
+    </div>
   </body>
 </html>
