--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 
     <link rel="stylesheet" href="styles.css" />
     <script src="/dist/bundle.js" type="module"></script>
+    <!-- <script src="./src/app.js" type="module"></script> -->
 
     <title>Wine is Fine</title>
     <link rel="icon" type="image/x-icon" href="/images/favi-wine.png" />
